getByMapPoint
