# app/Http/Controllers/CompanyController.php
@@ -11,6 +11,8 @@ use App\Http\Filters\CompanyFilter;
 use App\Http\Requests\CompanyRequest;
 use App\Http\Resources\CompanyResource;
 use App\Models\Company;
+use Illuminate\Support\Facades\DB;
+
 /**
  * @OA\Info(title="Rest API for catalog", version="1")
  */
@@ -100,6 +102,69 @@ class CompanyController extends Controller
     public function getByRubric(int $id): JsonResource
     {
         $companies = Company::withWhereHas('rubrics', fn($query) => $query->where('rubric_id', '=', $id))->get();
+
+        return CompanyResourceCollection::make($companies);
+    }
+
+    /**
+     * @OA\Get(
+     *       security={{"apiKey": {}}},
+     *       path="/api/auth/companies/map/point/{latitude}/{longitude}/{type}",
+     *       operationId="getByMapPoint",
+     *       tags={"Company"},
+     *       summary="Get list of companies by map point",
+     *       description="Returns list of companies by map point",
+     *           @OA\Parameter(
+     *           description="latitude",
+     *           in="path",
+     *           name="latitude",
+     *           required=true,
+     *           @OA\Schema(
+     *               type="string",
+     *               example="47.897709"
+     *           )
+     *       ),
+     *            @OA\Parameter(
+     *            description="longitude",
+     *            in="path",
+     *            name="longitude",
+     *            required=true,
+     *            @OA\Schema(
+     *                type="string",
+     *                example="40.082366"
+     *            )
+     *        ),
+     *             @OA\Parameter(
+     *             description="type of search: radius or rectangle",
+     *             in="path",
+     *             name="type",
+     *             required=true,
+     *             @OA\Schema(
+     *                 type="integer",
+     *                 example="1"
+     *             )
+     *         ),
+     *       @OA\Response(
+     *           response=200,
+     *           description="successful operation"
+     *        )
+     *      )
+     *
+     *  Returns list of companies by map point
+     * /
+     * @return JsonResource
+     */
+    public function getByMapPoint(string $latitude, string $longitude, int $type)
+    : JsonResource
+    {
+        if (!in_array($type, [1, 2])) {
+            return new JsonResource(['msg' => 'allowed types are 1 or 2']);
+        }
+
+        $this->filter->lat = $latitude;
+        $this->filter->lon = $longitude;
+        $this->filter->radius = $type == 1 ? 1 : 0;
+        $companies = Company::filter($this->filter)->paginate(10);
 
         return CompanyResourceCollection::make($companies);
     }
